--- a/engine.html
+++ b/engine.html
@@ -324,7 +324,8 @@ $def with (name)
               else {
                 console.log("elsing")
                 menu.active = false
-                ok_submenu.active = false
+                ok_submenu.menu_box.active = false
+                player.controls()
               }
             })
 
