--- a/engine.html
+++ b/engine.html
@@ -147,14 +147,18 @@ $def with (name)
             level_select_menu.active = true
             level_select_menu.controls(level_select_menu,level_select_ok)
             level_select_ok.menu_box.active = true
+            level_select_string = player_level + "-" + player_stage
+            level_select_menu.items[0].text = level_select_string
           }))
           level_edit_menu_items.push(new MenuItem(level_edit_menu,"Save",function() {
             console.log("Save")
             saveLevel(player_level,player_stage,player.board,function() {
               findEditLevels(function(latest) {
+                console.log("callback for findEditLevels, latest = " + latest)
                 latest_edit = latest
-                player_progress[0] = latest - 1
-                level_select.stage = latest
+                level_select_menu.stage = latest
+                player_progress[0] = latest
+                player_stage = latest - 1
               })
             })
           }))
@@ -164,12 +168,16 @@ $def with (name)
           }))
           level_edit_menu_items.push(new MenuItem(level_edit_menu,"Delete",function() {
             console.log("Delete")
-            deleteLevel (player_level,player_stage,function(latest){
-              latest_edit = latest
-              player_progress[0] = latest - 1
-              player_stage = latest_edit
-              jaws.start(Game)              
-            })
+            if (player_stage == latest_edit) {
+              jaws.start(Game)
+            } else {
+              deleteLevel (player_level,player_stage,function(latest){
+                latest_edit = latest
+                player_progress[0] = latest - 1
+                player_stage = latest_edit
+                jaws.start(Game)              
+              })
+            }
           }))
           level_edit_menu_items.push(new MenuItem(level_edit_menu,"Clear",function() {
             console.log("Clear")
@@ -188,7 +196,14 @@ $def with (name)
 
           // level select menu
           level_select_menu = new MenuBox("Level",level_edit_menu,level_edit_menu.x, level_edit_menu.y + level_edit_menu.height + 1, level_edit_menu.width, [new MenuItem(level_select_menu,level_select_string,function() {
-            jaws.start(Game)
+            if (level_select_menu.stage == latest_edit) {
+              level_select_menu.active = false
+              level_select_ok.menu_box.active = false
+              player.controls()
+              player_stage = latest_edit - 1
+            }
+            else
+              jaws.start(Game)
           })])
 
           level_select_menu.level = player_level
@@ -2303,7 +2318,7 @@ $def with (name)
 
     function loadLevel (level,stage,board,callback) {
 
-      var json_data = JSON.stringify({'type': "loadLevel", 'level': [level,stage], 'latest': latest_edit})
+      var json_data = JSON.stringify({'type': "loadLevel", 'level': [level,stage]})
 
       console.log("loading stage = " + level)
       jQuery.ajax({
@@ -2319,7 +2334,7 @@ $def with (name)
 
     function deleteLevel (level,stage,callback) {
 
-      var json_data = JSON.stringify({'type': "deleteLevel", 'level': [level,stage]})
+      var json_data = JSON.stringify({'type': "deleteLevel", 'level': [level,stage,latest_edit]})
 
       console.log("deleting stage = " + stage)
       jQuery.ajax({
